--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://amit2soni.github.io/stackOverflowClone",
+  "homepage":"http://amit2soni.github.io",
   "name": "stackoverflow",
   "version": "0.1.0",
   "private": true,
